# PassThePandas

./: CMakeLists.txt
include/: Dice.h  Game.h  Player.h
src/: Dice.cpp  Game.cpp  Player.cpp  main.cpp
